footer: go-to-top: fix overlap with next_page button
close: #91

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -51,3 +51,9 @@
 .top-link:focus {
     outline: 0
 }
+
+@media screen and (max-width:800px) {
+    .list .top-link {
+        transform: translateY(-5rem)
+    }
+}
